rust/codec-jats/tests/snapshots/examples__pmc-12354728.decode.losses.snap
---
source: rust/codec-jats/tests/examples.rs
expression: info.losses
---
//article/back/notes/notes: 1
//article/back/ref-list/@id: 1
//article/back/ref-list/ref/element-citation/@id: 43
//article/back/ref-list/ref/element-citation/article-title/italic/@toggle: 16
//article/back/ref-list/ref/element-citation/person-group/etal: 18
//article/back/ref-list/ref/element-citation/person-group/name/@name-style: 89
//article/back/ref-list/ref/element-citation/pub-id/@assigning-authority: 18
//article/back/ref-list/ref/mixed-citation/bold: 4
//article/back/ref-list/ref/mixed-citation/italic: 15
//article/back/ref-list/ref/mixed-citation/pub-id/@assigning-authority: 2
//article/back/ref-list/title: 1
//article/body/sec/p/@id: 4
//article/body/sec/p/italic/@toggle: 14
//article/body/sec/p/supplementary-material/@content-type: 1
//article/body/sec/p/supplementary-material/@orientation: 1
//article/body/sec/p/supplementary-material/@position: 1
//article/body/sec/sec/p/@id: 14
//article/body/sec/sec/p/fig/@orientation: 2
//article/body/sec/sec/p/fig/@position: 2
//article/body/sec/sec/p/fig/graphic/@id: 2
//article/body/sec/sec/p/fig/graphic/@orientation: 2
//article/body/sec/sec/p/fig/graphic/@position: 2
//article/body/sec/sec/p/fig/p/italic/@toggle: 17
//article/body/sec/sec/p/italic/@toggle: 11
//article/body/sec/sec/p/table-wrap/@orientation: 2
//article/body/sec/sec/p/table-wrap/@position: 2
//article/body/sec/sec/p/table-wrap/caption/p/italic/@toggle: 16
//article/front/article-meta/abstract/p/@id: 1
//article/front/article-meta/article-version/@article-version-type: 1
//article/front/article-meta/contrib-group/address: 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='issue-copyright-statement']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-has-pdf']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-has-supplement']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-in-epmc']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-is-real-version']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-is-scanned-article']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-legally-suppressed']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-manuscript']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-olf']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-open-access']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-pdf-only']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-preprint']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-suppress-copyright']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-status-embargo']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-status-live']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-status-qastatus']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-status-released']": 1
//article/front/article-meta/kwd-group/@kwd-group-type: 1
//article/front/article-meta/kwd-group/@lang: 1
//article/processing-meta: 1
