rust/codec-jats/tests/snapshots/examples__pmc-12431436.decode.losses.snap
---
source: rust/codec-jats/tests/examples.rs
expression: info.losses
---
//article/back/ref-list/ref/mixed-citation/etal: 17
//article/back/ref-list/ref/mixed-citation/name/@name-style: 137
//article/back/ref-list/title: 1
//article/body/sec/p/italic/@toggle: 9
//article/body/sec/sec/fig/@orientation: 4
//article/body/sec/sec/fig/@position: 4
//article/body/sec/sec/fig/graphic/@orientation: 4
//article/body/sec/sec/fig/graphic/@position: 4
//article/body/sec/sec/p/italic/@toggle: 8
//article/body/sec/sec/table-wrap/@orientation: 4
//article/body/sec/sec/table-wrap/@position: 4
//article/body/sec/sec/table-wrap/table/tbody/tr/td/break: 3
//article/body/sec/supplementary-material/@content-type: 3
//article/body/sec/supplementary-material/@orientation: 3
//article/body/sec/supplementary-material/@position: 3
//article/front/article-meta/abstract/p/italic/@toggle: 3
//article/front/article-meta/aff: 7
//article/front/article-meta/article-version/@article-version-type: 1
//article/front/article-meta/author-notes: 1
//article/front/article-meta/contrib-group/role: 32
//article/front/article-meta/counts/fig-count: 1
//article/front/article-meta/counts/page-count: 1
//article/front/article-meta/counts/table-count: 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='Data Availability']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-has-pdf']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-has-supplement']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-in-epmc']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-is-real-version']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-is-scanned-article']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-legally-suppressed']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-manuscript']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-olf']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-open-access']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-pdf-only']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-preprint']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-suppress-copyright']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-status-embargo']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-status-live']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-status-qastatus']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-status-released']": 1
//article/front/article-meta/title-group/italic/@toggle: 1
//article/processing-meta: 1
