rust/codec-jats/tests/snapshots/examples__pmc-12431436.encode.losses.snap
---
source: rust/codec-jats/tests/examples.rs
expression: info.losses
---
Article.editors: 1
Article.funders: 1
Reference.isPartOf.issueNumber: 18
Reference.isPartOf.volumeNumber: 29
