rust/codec-jats/tests/snapshots/examples__pmc-6849754.decode.losses.snap
---
source: rust/codec-jats/tests/examples.rs
expression: info.losses
---
//article/back/ref-list/@content-type: 1
//article/back/ref-list/@id: 1
//article/back/ref-list/ref/mixed-citation/@id: 70
//article/back/ref-list/ref/mixed-citation/italic: 30
//article/back/ref-list/ref/mixed-citation/source/@lang: 67
//article/back/ref-list/ref/mixed-citation/string-name/suffix: 1
//article/back/ref-list/ref/mixed-citation/string-name/text(): 300
//article/back/ref-list/title: 1
//article/back/sec/p/email: 1
//article/back/sec/p/ext-link/@specific-use: 2
//article/body/sec/fig/@fig-type: 1
//article/body/sec/fig/@lang: 1
//article/body/sec/fig/@orientation: 1
//article/body/sec/fig/@position: 1
//article/body/sec/fig/graphic/@id: 1
//article/body/sec/fig/p/styled-content/@toggle: 3
//article/body/sec/sec/fig/@fig-type: 5
//article/body/sec/sec/fig/@lang: 5
//article/body/sec/sec/fig/@orientation: 5
//article/body/sec/sec/fig/@position: 5
//article/body/sec/sec/fig/graphic/@id: 5
//article/body/sec/sec/fig/p/styled-content/@toggle: 11
//article/body/sec/supplementary-material/@content-type: 1
//article/front/article-meta/abstract/p/styled-content/@toggle: 2
//article/front/article-meta/aff: 23
//article/front/article-meta/author-notes: 1
//article/front/article-meta/contrib-group/@id: 22
//article/front/article-meta/contrib-group/address: 1
//article/front/article-meta/counts/fig-count: 1
//article/front/article-meta/counts/page-count: 1
//article/front/article-meta/counts/table-count: 1
//article/front/article-meta/counts/word-count: 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='cover-date']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='details-of-publishers-convertor']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='source-schema-version-number']": 1
//article/front/article-meta/kwd-group/@id: 10
//article/front/article-meta/kwd-group/@kwd-group-type: 1
