rust/codec-jats/tests/snapshots/examples__pmc-6849754.encode.losses.snap
---
source: rust/codec-jats/tests/examples.rs
expression: info.losses
---
Article.about: 1
Article.editors: 1
Article.funders: 1
Article.identifiers: 1
Reference.isPartOf.volumeNumber: 64
