rust/codec-jats/tests/snapshots/examples__pmc-8438044.encode.losses.snap
---
source: rust/codec-jats/tests/examples.rs
expression: info.losses
---
Article.funders: 1
Link.jatsRefType: 14
Supplement.work_type: 10
