rust/codec-jats/tests/snapshots/examples__pmc-9786276.decode.losses.snap
---
source: rust/codec-jats/tests/examples.rs
expression: info.losses
---
//article/back/fn-group/fn/label: 2
//article/back/fn-group/fn/p/italic/@toggle: 3
//article/back/ref-list/@id: 1
//article/back/ref-list/ref/mixed-citation/@id: 65
//article/back/ref-list/ref/mixed-citation/article-title/italic/@toggle: 27
//article/back/ref-list/ref/mixed-citation/italic: 3
//article/back/ref-list/ref/mixed-citation/part-title/italic/@toggle: 1
//article/back/ref-list/ref/mixed-citation/person-group/string-name/@name-style: 10
//article/back/ref-list/ref/mixed-citation/pub-id/@assigning-authority: 25
//article/back/ref-list/ref/mixed-citation/string-name/@name-style: 132
//article/back/ref-list/ref/mixed-citation/string-name/suffix: 3
//article/back/ref-list/title: 1
//article/body/sec/fig/@fig-type: 2
//article/body/sec/fig/@orientation: 2
//article/body/sec/fig/@position: 2
//article/body/sec/fig/graphic/@id: 2
//article/body/sec/fig/graphic/@orientation: 2
//article/body/sec/fig/graphic/@position: 2
//article/body/sec/fig/p/italic/@toggle: 7
//article/body/sec/p/italic/@toggle: 79
//article/body/sec/sec/fig/@fig-type: 7
//article/body/sec/sec/fig/@orientation: 7
//article/body/sec/sec/fig/@position: 7
//article/body/sec/sec/fig/graphic/@id: 7
//article/body/sec/sec/fig/graphic/@orientation: 7
//article/body/sec/sec/fig/graphic/@position: 7
//article/body/sec/sec/fig/p/italic/@toggle: 33
//article/body/sec/sec/p/italic/@toggle: 313
//article/body/sec/sec/p/list/list-item/p/italic/@toggle: 2
//article/body/sec/sec/table-wrap/@content-type: 1
//article/body/sec/sec/table-wrap/@orientation: 1
//article/body/sec/sec/table-wrap/@position: 1
//article/body/sec/sec/table-wrap/table/col: 4
//article/body/sec/sec/table-wrap/table/tbody/tr/td/italic/@toggle: 4
//article/body/sec/sec/table-wrap/table/thead/@style: 1
//article/body/sec/sec/title/italic/@toggle: 4
//article/body/sec/supplementary-material/@content-type: 10
//article/body/sec/supplementary-material/@orientation: 10
//article/body/sec/supplementary-material/@position: 10
//article/body/sec/supplementary-material/media/@orientation: 10
//article/body/sec/supplementary-material/media/@position: 10
//article/body/sec/supplementary-material/p/italic/@toggle: 12
//article/front/article-meta/abstract/p/boxed-text/@orientation: 1
//article/front/article-meta/abstract/p/boxed-text/@position: 1
//article/front/article-meta/abstract/p/boxed-text/graphic/@id: 1
//article/front/article-meta/abstract/p/boxed-text/graphic/@orientation: 1
//article/front/article-meta/abstract/p/boxed-text/graphic/@position: 1
//article/front/article-meta/abstract/p/italic/@toggle: 14
//article/front/article-meta/article-version/@article-version-type: 1
//article/front/article-meta/author-notes/corresp: 1
//article/front/article-meta/contrib-group/contrib/@id: 1
//article/front/article-meta/counts/fig-count: 1
//article/front/article-meta/counts/page-count: 1
//article/front/article-meta/counts/table-count: 1
//article/front/article-meta/counts/word-count: 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='cover-date']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='details-of-publishers-convertor']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-license-ref']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-has-pdf']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-has-supplement']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-in-epmc']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-is-real-version']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-is-scanned-article']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-legally-suppressed']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-manuscript']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-olf']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-open-access']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-pdf-only']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-preprint']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-prop-suppress-copyright']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-status-embargo']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-status-live']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-status-qastatus']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='pmc-status-released']": 1
"//article/front/article-meta/custom-meta-group/custom-meta[meta-name='source-schema-version-number']": 1
//article/front/article-meta/issue/@seq: 1
//article/front/article-meta/kwd-group/@id: 4
//article/front/article-meta/kwd-group/@kwd-group-type: 1
"//article/front/journal-meta/custom-meta-group/custom-meta[meta-name='pmc-collection-title']": 1
"//article/front/journal-meta/custom-meta-group/custom-meta[meta-name='pmc-is-collection-domain']": 1
//article/front/notes/p/@content-type: 1
//article/front/notes/p/mixed-citation: 1
//article/front/notes/p/mixed-citation/@id: 1
//article/front/notes/p/mixed-citation/@publication-type: 1
//article/processing-meta: 1
