rust/codec-jats/tests/snapshots/examples__pmc-9786276.encode.losses.snap
---
source: rust/codec-jats/tests/examples.rs
expression: info.losses
---
Article.about: 1
Article.identifiers: 1
Article.version: 1
Reference.isPartOf.editors: 5
Reference.isPartOf.volumeNumber: 57
Supplement.work_type: 10
